tests/good/syntax/068-if-2.clap
val x = 
  if True then U

