tests/bad/syntax/068-if-2.clap
val x = 
  if True else U

